--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "php": ">=8.1.0",
         "payeer/trade-api-prototype": "dev-main"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "10.0.x-dev"
+    }
 }
